Imported into eclipse; added extra project files.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ICS_440_Project.zip_expanded</name>
+	<name>String-Handoff-Project</name>
 	<comment></comment>
 	<projects>
 	</projects>
